--- a/css/dizainas.css
+++ b/css/dizainas.css
@@ -1,4 +1,5 @@
 body {
+
     color: brown;
     font-family: verdana;
     font-size: 15px;
@@ -13,6 +14,7 @@ body {
     /*text-shadow: 3px 2px blue;*/
     background-color: yellowgreen;
 }
+
 img{
     border: 1px solid #ddd;
     border-radius: 4px;
@@ -23,10 +25,11 @@ img{
 
 header {
     background-color: brown;
+    padding: 20px 20px 30px;
 }
 
 footer {
-    background-color: cornflowerblue;
+    background-color: brown;
 }
 
 .content header {
@@ -40,11 +43,11 @@ h1 {
 }
 
 main {
-    width: 960px;
     border: 1px solid darkgray;
+    width: 960px;
     background-color: lightgray;
     margin: 0 auto;
-    padding: 70px 20px 30px;
-    img
+    padding: 0px 150px 200px;
+
 
 }
