--- a/css/dizainas.css
+++ b/css/dizainas.css
@@ -26,6 +26,7 @@ img{
 header {
     background-color: brown;
     padding: 20px 20px 30px;
+
 }
 
 footer {
@@ -40,13 +41,14 @@ footer {
 h1 {
     font-weight: bold;
     font-size: 24px;
+    background-color: lightblue;
 }
 
 main {
     border: 1px solid darkgray;
     width: 960px;
-    background-color: lightgray;
-    margin: 0 auto;
+    background-color: lightblue;
+    margin: 30px;
     padding: 0px 150px 200px;
 
 
