--- a/css/layout.css
+++ b/css/layout.css
@@ -38,34 +38,37 @@ h1{
     font-family: Verdana;
     text-align: center;
     background-color: linen;
+    padding: 10px;
 }
 p {
     text-indent: 20px;
     text-align: center;
     font: italic 15px Verdana;
+
 }
 .port1{
     text-align: center;
-    width: 300px;
+    width: 250px;
 }
 .port2{
 
-    width: 300px;
+    width: 250em;
 }
 .port3{
-    width: 300px;
+    width: 250px;
 }
 .port4{
-    width: 300px;
+    width: 250px;
 }
 .port5{
-    width: 300px;
+    width: 250px;
 }
 .port6{
-    width: 300px;
+    width: 250px;
 }
 .h1{
-    font-size: 4em;
+    text-orientation: unset;
+    font-size: 3em;
 }
 .grid-item {
     /*!*background-color: rgba(255, 255, 255, 0.8);*!*/
